[workspace]

members = [
  "animate-hello-world",
  "animate-black-and-red",
  "animate-graphs",
  "animate-simplest",
  "animate-video-and-time",
  "animate-array-interpolation",
  "animate-dynamic-to",
  "animate-repeat",
  "animate-relative-values",
  "animate-yoyo",
  "animate-stop-all-chained-tweens",
  "animate-graphs-custom-functions",
  "animate-relative-start-time",
  "animate-pause-tween",
  "animate-complex-properties",
  "animate-an-array-of-values",
  "bar-chart",
  "line-chart",
  "pie-chart",
  "gauge-chart",
  "radar-chart",
]