[package]
name = "radar-chart"
version = "0.1.0"
authors = ["Victor Dudochkin <dudochkin.victor@gmail.com>"]
edition = "2018"

[dependencies]
ux-primitives = "0.1"
ux-dataflow = "0.1"
ux-animate = "0.1"
ux-charts = "0.1.2"

log = "0.4"
env_logger = "0.8"
png = "0.16"
gio = { version = "0.9", features = ["v2_58"] }
gtk = { version = "0.9", features = ["v3_22"] }
cairo-rs = { version = "0.9", features = ["png"] }
glib = { version="0.10", features = ["v2_58"] }
gdk = { version="0.13", features = ["v3_22"] }
gdk-pixbuf = "0.9"
